--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-pyqt5
-asyncqt
-requests
-bs4
 aiofiles
+asyncqt
+bs4
+lxml
+patool
+pyqt5
+Pillow
+requests
+requests-async
 selenium
 selenium-wire
-patool
-requests-async
-Pillow
 win10toast
